Prevent button overflowing between 360px - 400px

--- a/version_control/Codurance_September2020/css/modules/try-our-compass-tool.css
+++ b/version_control/Codurance_September2020/css/modules/try-our-compass-tool.css
@@ -43,7 +43,7 @@
 
 {% call utils.small() %}
     .cm-compass-teaser [class*="button"] {
-        width: 100%;
+        display: block;
         max-width: var(--button-max-width);
     }
 {% endcall %}
